--- a/index.html
+++ b/index.html
@@ -11,31 +11,47 @@
     <section class="showcase" class="form">
         <header>
           <h2 class="logo">NKE Media</h2>
-          <div class="toggle"></div>
+
+
+          <div id="nav-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+
+
+
         </header>
+
         <video src="Media/bg.mp4" muted loop autoplay></video>
         <div class="overlay"></div>
         <div class="text">
           <h2>NKE Media </h2> 
           <h3></h3>
-          <p> Welcome to NKE Media, where innovation meets excellence in digital branding and content creation. We are a powerhouse of creativity, crafting captivating narratives and visually stunning experiences that push boundaries and redefine extraordinary. 
-            Unlock the limitless possibilities for your brand and embark on a transformative journey with us.</p>
-          <a id="explore-btn" >Explore</a>
+          <p>At NKE Media, we bring together urban music, fashion, sports and gaming to empower young creators and fans alike. We team up with cutting edge artists and organisations to spark real change—giving youth a platform to share their stories, build community, and make their voices impossible to ignore.</p>
+          <a id="explore-btn" >Listen Now</a>
         </div>
-        <ul class="social">
-          <li><a href="https://www.facebook.com/NKEMEDIA/"><img src="https://i.ibb.co/x7P24fL/facebook.png"></a></li>
-          <li><a href="https://twitter.com/NKEMEDIA"><img src="https://i.ibb.co/Wnxq2Nq/twitter.png"></a></li>
-          <li><a href="https://www.instagram.com/nkemedia/"><img src="https://i.ibb.co/ySwtH4B/instagram.png"></a></li>
-          <li><a href="https://www.youtube.com/@Nkemedia"><img src="./Media/youtube.png"></a></li>
 
+
+        <ul class="social">
+          <li><a href="https://www.facebook.com/NKEMEDIA/"><img src="Media/facebook.png"></a></li>
+          <li><a href="https://twitter.com/NKEMEDIA"><img src="Media/twitter.png"></a></li>
+          <li><a href="https://www.instagram.com/nkemedia/"><img src="Media/instagram.png"></a></li>
+          <li><a href="https://www.youtube.com/@Nkemedia"><img src="Media/YT.png"></a></li>
+          <li><a href="https://www.tiktok.com/@nkemedia"><img src="Media/tiktok.png"></a></li>
         </ul>
+
       </section>
       <div class="menu">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="radio.html">Radio</a></li>
-          <li><a href="soon.html">Events</a></li>
-          <li><a href="About.html">About</a></li>
+          <li><a href="soon.html">Sports</a></li>
+          <li><a href="soon.html">News</a></li>
+          <li><a href="About.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
