--- a/radio.html
+++ b/radio.html
@@ -15,12 +15,13 @@
         </header>
        
         <script src="https://embed.radio.co/player/ac348f0.js"></script>
+        
         <ul class="social">
-          <li><a href="https://www.facebook.com/NKEMEDIA/"><img src="https://i.ibb.co/x7P24fL/facebook.png"></a></li>
-          <li><a href="https://twitter.com/NKEMEDIA"><img src="https://i.ibb.co/Wnxq2Nq/twitter.png"></a></li>
-          <li><a href="https://www.instagram.com/nkemedia/"><img src="https://i.ibb.co/ySwtH4B/instagram.png"></a></li>
-          <li><a href="https://www.youtube.com/@Nkemedia"><img src="./Media/youtube.png"></a></li>
-
+          <li><a href="https://www.facebook.com/NKEMEDIA/"><img src="Media/facebook.png"></a></li>
+          <li><a href="https://twitter.com/NKEMEDIA"><img src="Media/twitter.png"></a></li>
+          <li><a href="https://www.instagram.com/nkemedia/"><img src="Media/instagram.png"></a></li>
+          <li><a href="https://www.youtube.com/@Nkemedia"><img src="Media/YT.png"></a></li>
+          <li><a href="https://www.tiktok.com/@nkemedia"><img src="Media/tiktok.png"></a></li>
         </ul>
       </section>
       <div class="menu">
